namespaces/live.cloud-platform.service.justice.gov.uk/ap-judicial-reviews-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ap-judicial-reviews-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "analytical-platform"
    cloud-platform.justice.gov.uk/application: "Judicial reviews app"
    cloud-platform.justice.gov.uk/owner: "analytical-platform: analytics-platform-tech@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/moj-analytical-services/judicial-reviews-app.git"
    cloud-platform.justice.gov.uk/team-name: "analytical-platform"
    cloud-platform.justice.gov.uk/review-after: ""
